exemplo/AvaliaTrabs/compilador.output
Terminals unused in grammar

    GOTO
    DIVIDEB


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 bloco: parte_de_declaracao_de_rotulos_init parte_de_definicao_de_tipos_init parte_declara_vars_init parte_de_declaracao_de_sub_rotinas_init comando_composto

    4 parte_de_declaracao_de_rotulos_init: LABEL parte_de_declaracao_de_rotulos PONTO_E_VIRGULA
    5                                    | ε

    6 parte_de_declaracao_de_rotulos: parte_de_declaracao_de_rotulos VIRGULA numero
    7                               | numero

    8 parte_de_definicao_de_tipos_init: TYPE parte_de_definicao_de_tipos PONTO_E_VIRGULA
    9                                 | ε

   10 parte_de_definicao_de_tipos: parte_de_definicao_de_tipos PONTO_E_VIRGULA definicao_de_tipo
   11                            | definicao_de_tipo

   12 definicao_de_tipo: IDENT IGUAL tipo

   13 tipo: INTEIRO
   14     | BOLLEANO
   15     | ARRAY indice OF tipo
   16     | ARRAY OF tipo

   17 tipo_func: INTEIRO
   18          | BOLLEANO

   19 indice: numero DOIS_PONTOS_SEQ numero

   20 $@2: ε

   21 parte_declara_vars_init: VAR $@2 parte_declara_vars
   22                        | ε

   23 parte_declara_vars: parte_declara_vars declara_var PONTO_E_VIRGULA
   24                   | declara_var PONTO_E_VIRGULA

   25 declara_var: lista_idents_dec_var DOIS_PONTOS tipo

   26 lista_idents: lista_idents VIRGULA IDENT
   27             | IDENT

   28 lista_idents_dec_var: lista_idents_dec_var VIRGULA IDENT
   29                     | IDENT

   30 lista_idents_param_formal: lista_idents_param_formal VIRGULA IDENT
   31                          | IDENT

   32 lista_idents_read: lista_idents_read VIRGULA IDENT
   33                  | IDENT

   34 parte_de_declaracao_de_sub_rotinas_init: parte_de_declaracao_de_sub_rotinas
   35                                        | ε

   36 parte_de_declaracao_de_sub_rotinas: parte_de_declaracao_de_sub_rotinas declaracao_de_procedimento
   37                                   | declaracao_de_procedimento
   38                                   | declaracao_de_funcao

   39 $@3: ε

   40 $@4: ε

   41 $@5: ε

   42 $@6: ε

   43 declaracao_de_procedimento: PROCEDURE $@3 IDENT $@4 declaracao_de_procedimento_pf PONTO_E_VIRGULA $@5 bloco $@6 PONTO_E_VIRGULA

   44 declaracao_de_procedimento_pf: ABRE_PARENTESES parametros_formais FECHA_PARENTESES
   45                              | ε

   46 $@7: ε

   47 $@8: ε

   48 $@9: ε

   49 $@10: ε

   50 declaracao_de_funcao: FUNCTION $@7 IDENT $@8 declaracao_de_funcao_pf DOIS_PONTOS tipo_func $@9 PONTO_E_VIRGULA bloco $@10 PONTO_E_VIRGULA

   51 declaracao_de_funcao_pf: ABRE_PARENTESES parametros_formais FECHA_PARENTESES
   52                        | ε

   53 parametros_formais: parametros_formais PONTO_E_VIRGULA secao_de_parametros_formais
   54                   | secao_de_parametros_formais

   55 secao_de_parametros_formais: secao_de_parametros_formais_vars
   56                            | FUNCTION lista_idents DOIS_PONTOS IDENT
   57                            | PROCEDURE lista_idents DOIS_PONTOS IDENT

   58 secao_de_parametros_formais_vars: VAR lista_idents_param_formal DOIS_PONTOS tipo
   59                                 | lista_idents_param_formal DOIS_PONTOS tipo

   60 comando_composto: T_BEGIN comandos T_END

   61 comando_composto_while: T_BEGIN comandos T_END

   62 comandos: comandos comando comandos_end
   63         | comando PONTO_E_VIRGULA
   64         | comando_sem_rotulo

   65 comandos_end: PONTO_E_VIRGULA
   66             | ε

   67 comando: comando_sem_rotulo

   68 $@11: ε

   69 comando_sem_rotulo: IDENT $@11 atribuicao_ou_chamda_de_procedimento
   70                   | chamada_de_procedimento_RW
   71                   | comando_repetitivo
   72                   | comando_composto
   73                   | comando_condicional

   74 atribuicao_ou_chamda_de_procedimento: atribuicao

   75 $@12: ε

   76 atribuicao_ou_chamda_de_procedimento: $@12 chamada_de_procedimento

   77 $@13: ε

   78 atribuicao: ATRIBUICAO $@13 expressao

   79 chamada_de_procedimento: chamada_subrotina_args

   80 $@14: ε

   81 chamada_de_procedimento_RW: READ $@14 ABRE_PARENTESES lista_idents_read FECHA_PARENTESES

   82 $@15: ε

   83 chamada_de_procedimento_RW: WRITE $@15 ABRE_PARENTESES lista_de_expressoes_write FECHA_PARENTESES

   84 chamada_subrotina_args: ABRE_PARENTESES lista_de_expressoes_sr FECHA_PARENTESES
   85                       | ε

   86 comando_condicional: if_then cond_else

   87 $@16: ε

   88 $@17: ε

   89 if_then: IF $@16 expressao $@17 THEN comando_sem_rotulo

   90 cond_else: ELSE comando_sem_rotulo
   91          | ε

   92 $@18: ε

   93 $@19: ε

   94 comando_repetitivo: WHILE $@18 expressao $@19 DO comando_composto_while

   95 lista_de_expressoes_sr: lista_de_expressoes_sr VIRGULA expressao
   96                       | expressao
   97                       | ε

   98 lista_de_expressoes_write: lista_de_expressoes_write VIRGULA expressao
   99                          | expressao

  100 expressao: expressao relacao
  101          | expressao_simples

  102 relacao: IGUAL expressao_simples
  103        | DIFERENTE expressao_simples
  104        | MENOR_IGUAL_QUE expressao_simples
  105        | MAIOR_IGUAL_QUE expressao_simples
  106        | MENOR_QUE expressao_simples
  107        | MAIOR_QUE expressao_simples

  108 expressao_simples: MAIS termo termos

  109 $@20: ε

  110 expressao_simples: MENOS termo $@20 termos
  111                  | termo termos
  112                  | MAIS termo
  113                  | MENOS termo
  114                  | termo

  115 termos: termos MAIS termo
  116       | termos MENOS termo
  117       | termos OR termo
  118       | MAIS termo
  119       | MENOS termo
  120       | OR termo

  121 termo: termo MULTIPLICA fator
  122      | termo DIVIDE fator
  123      | termo AND fator
  124      | fator

  125 fator: varivel_ou_cmd_func
  126      | numero
  127      | vlr_booleano
  128      | ABRE_PARENTESES expressao FECHA_PARENTESES
  129      | NOT fator

  130 $@21: ε

  131 varivel_ou_cmd_func: IDENT $@21 chamada_subrotina_func_args

  132 chamada_subrotina_func_args: ABRE_PARENTESES lista_de_expressoes_sr FECHA_PARENTESES
  133                            | ε

  134 numero: NUMERO

  135 vlr_booleano: T_TRUE
  136             | T_FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    VAR (259) 21 58
    T_BEGIN (260) 60 61
    LABEL (261) 4
    TYPE (262) 8
    INTEIRO (263) 13 17
    ARRAY (264) 15 16
    OF (265) 15 16
    PROCEDURE (266) 43 57
    FUNCTION (267) 50 56
    IF (268) 89
    THEN (269) 89
    ELSE (270) 90
    GOTO (271)
    WHILE (272) 94
    T_END (273) 60 61
    ATRIBUICAO (274) 78
    MAIS (275) 108 112 115 118
    MENOS (276) 110 113 116 119
    OR (277) 117 120
    MULTIPLICA (278) 121
    DIVIDE (279) 122
    AND (280) 123
    PONTO_E_VIRGULA (281) 2 4 8 10 23 24 43 50 53 63 65
    DOIS_PONTOS (282) 25 50 56 57 58 59
    VIRGULA (283) 6 26 28 30 32 95 98
    PONTO (284) 2
    ABRE_PARENTESES (285) 2 44 51 81 83 84 128 132
    FECHA_PARENTESES (286) 2 44 51 81 83 84 128 132
    NUMERO (287) 134
    IDENT (288) 2 12 26 27 28 29 30 31 32 33 43 50 56 57 69 131
    IGUAL (289) 12 102
    DIFERENTE (290) 103
    MENOR_IGUAL_QUE (291) 104
    MAIOR_IGUAL_QUE (292) 105
    MENOR_QUE (293) 106
    MAIOR_QUE (294) 107
    READ (295) 81
    WRITE (296) 83
    NOT (297) 129
    BOLLEANO (298) 14 18
    T_TRUE (299) 135
    T_FALSE (300) 136
    DO (301) 94
    DIVIDEB (302)
    DOIS_PONTOS_SEQ (303) 19
    LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    programa (51)
        on left: 2
        on right: 0
    $@1 (52)
        on left: 1
        on right: 2
    bloco (53)
        on left: 3
        on right: 2 43 50
    parte_de_declaracao_de_rotulos_init (54)
        on left: 4 5
        on right: 3
    parte_de_declaracao_de_rotulos (55)
        on left: 6 7
        on right: 4 6
    parte_de_definicao_de_tipos_init (56)
        on left: 8 9
        on right: 3
    parte_de_definicao_de_tipos (57)
        on left: 10 11
        on right: 8 10
    definicao_de_tipo (58)
        on left: 12
        on right: 10 11
    tipo (59)
        on left: 13 14 15 16
        on right: 12 15 16 25 58 59
    tipo_func (60)
        on left: 17 18
        on right: 50
    indice (61)
        on left: 19
        on right: 15
    parte_declara_vars_init (62)
        on left: 21 22
        on right: 3
    $@2 (63)
        on left: 20
        on right: 21
    parte_declara_vars (64)
        on left: 23 24
        on right: 21 23
    declara_var (65)
        on left: 25
        on right: 23 24
    lista_idents (66)
        on left: 26 27
        on right: 2 26 56 57
    lista_idents_dec_var (67)
        on left: 28 29
        on right: 25 28
    lista_idents_param_formal (68)
        on left: 30 31
        on right: 30 58 59
    lista_idents_read (69)
        on left: 32 33
        on right: 32 81
    parte_de_declaracao_de_sub_rotinas_init (70)
        on left: 34 35
        on right: 3
    parte_de_declaracao_de_sub_rotinas (71)
        on left: 36 37 38
        on right: 34 36
    declaracao_de_procedimento (72)
        on left: 43
        on right: 36 37
    $@3 (73)
        on left: 39
        on right: 43
    $@4 (74)
        on left: 40
        on right: 43
    $@5 (75)
        on left: 41
        on right: 43
    $@6 (76)
        on left: 42
        on right: 43
    declaracao_de_procedimento_pf (77)
        on left: 44 45
        on right: 43
    declaracao_de_funcao (78)
        on left: 50
        on right: 38
    $@7 (79)
        on left: 46
        on right: 50
    $@8 (80)
        on left: 47
        on right: 50
    $@9 (81)
        on left: 48
        on right: 50
    $@10 (82)
        on left: 49
        on right: 50
    declaracao_de_funcao_pf (83)
        on left: 51 52
        on right: 50
    parametros_formais (84)
        on left: 53 54
        on right: 44 51 53
    secao_de_parametros_formais (85)
        on left: 55 56 57
        on right: 53 54
    secao_de_parametros_formais_vars (86)
        on left: 58 59
        on right: 55
    comando_composto (87)
        on left: 60
        on right: 3 72
    comando_composto_while (88)
        on left: 61
        on right: 94
    comandos (89)
        on left: 62 63 64
        on right: 60 61 62
    comandos_end (90)
        on left: 65 66
        on right: 62
    comando (91)
        on left: 67
        on right: 62 63
    comando_sem_rotulo (92)
        on left: 69 70 71 72 73
        on right: 64 67 89 90
    $@11 (93)
        on left: 68
        on right: 69
    atribuicao_ou_chamda_de_procedimento (94)
        on left: 74 76
        on right: 69
    $@12 (95)
        on left: 75
        on right: 76
    atribuicao (96)
        on left: 78
        on right: 74
    $@13 (97)
        on left: 77
        on right: 78
    chamada_de_procedimento (98)
        on left: 79
        on right: 76
    chamada_de_procedimento_RW (99)
        on left: 81 83
        on right: 70
    $@14 (100)
        on left: 80
        on right: 81
    $@15 (101)
        on left: 82
        on right: 83
    chamada_subrotina_args (102)
        on left: 84 85
        on right: 79
    comando_condicional (103)
        on left: 86
        on right: 73
    if_then (104)
        on left: 89
        on right: 86
    $@16 (105)
        on left: 87
        on right: 89
    $@17 (106)
        on left: 88
        on right: 89
    cond_else (107)
        on left: 90 91
        on right: 86
    comando_repetitivo (108)
        on left: 94
        on right: 71
    $@18 (109)
        on left: 92
        on right: 94
    $@19 (110)
        on left: 93
        on right: 94
    lista_de_expressoes_sr (111)
        on left: 95 96 97
        on right: 84 95 132
    lista_de_expressoes_write (112)
        on left: 98 99
        on right: 83 98
    expressao (113)
        on left: 100 101
        on right: 78 89 94 95 96 98 99 100 128
    relacao (114)
        on left: 102 103 104 105 106 107
        on right: 100
    expressao_simples (115)
        on left: 108 110 111 112 113 114
        on right: 101 102 103 104 105 106 107
    $@20 (116)
        on left: 109
        on right: 110
    termos (117)
        on left: 115 116 117 118 119 120
        on right: 108 110 111 115 116 117
    termo (118)
        on left: 121 122 123 124
        on right: 108 110 111 112 113 114 115 116 117 118 119 120 121 122 123
    fator (119)
        on left: 125 126 127 128 129
        on right: 121 122 123 124 129
    varivel_ou_cmd_func (120)
        on left: 131
        on right: 125
    $@21 (121)
        on left: 130
        on right: 131
    chamada_subrotina_func_args (122)
        on left: 132 133
        on right: 131
    numero (123)
        on left: 134
        on right: 6 7 19 126
    vlr_booleano (124)
        on left: 135 136
        on right: 127


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   27 lista_idents: IDENT •

    $default  reduce using rule 27 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   26 lista_idents: lista_idents • VIRGULA IDENT

    VIRGULA           shift, and go to state 9
    FECHA_PARENTESES  shift, and go to state 10


State 9

   26 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 11


State 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 11

   26 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 26 (lista_idents)


State 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    LABEL  shift, and go to state 13

    $default  reduce using rule 5 (parte_de_declaracao_de_rotulos_init)

    bloco                                go to state 14
    parte_de_declaracao_de_rotulos_init  go to state 15


State 13

    4 parte_de_declaracao_de_rotulos_init: LABEL • parte_de_declaracao_de_rotulos PONTO_E_VIRGULA

    NUMERO  shift, and go to state 16

    parte_de_declaracao_de_rotulos  go to state 17
    numero                          go to state 18


State 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 19


State 15

    3 bloco: parte_de_declaracao_de_rotulos_init • parte_de_definicao_de_tipos_init parte_declara_vars_init parte_de_declaracao_de_sub_rotinas_init comando_composto

    TYPE  shift, and go to state 20

    $default  reduce using rule 9 (parte_de_definicao_de_tipos_init)

    parte_de_definicao_de_tipos_init  go to state 21


State 16

  134 numero: NUMERO •

    $default  reduce using rule 134 (numero)


State 17

    4 parte_de_declaracao_de_rotulos_init: LABEL parte_de_declaracao_de_rotulos • PONTO_E_VIRGULA
    6 parte_de_declaracao_de_rotulos: parte_de_declaracao_de_rotulos • VIRGULA numero

    PONTO_E_VIRGULA  shift, and go to state 22
    VIRGULA          shift, and go to state 23


State 18

    7 parte_de_declaracao_de_rotulos: numero •

    $default  reduce using rule 7 (parte_de_declaracao_de_rotulos)


State 19

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 20

    8 parte_de_definicao_de_tipos_init: TYPE • parte_de_definicao_de_tipos PONTO_E_VIRGULA

    IDENT  shift, and go to state 24

    parte_de_definicao_de_tipos  go to state 25
    definicao_de_tipo            go to state 26


State 21

    3 bloco: parte_de_declaracao_de_rotulos_init parte_de_definicao_de_tipos_init • parte_declara_vars_init parte_de_declaracao_de_sub_rotinas_init comando_composto

    VAR  shift, and go to state 27

    $default  reduce using rule 22 (parte_declara_vars_init)

    parte_declara_vars_init  go to state 28


State 22

    4 parte_de_declaracao_de_rotulos_init: LABEL parte_de_declaracao_de_rotulos PONTO_E_VIRGULA •

    $default  reduce using rule 4 (parte_de_declaracao_de_rotulos_init)


State 23

    6 parte_de_declaracao_de_rotulos: parte_de_declaracao_de_rotulos VIRGULA • numero

    NUMERO  shift, and go to state 16

    numero  go to state 29


State 24

   12 definicao_de_tipo: IDENT • IGUAL tipo

    IGUAL  shift, and go to state 30


State 25

    8 parte_de_definicao_de_tipos_init: TYPE parte_de_definicao_de_tipos • PONTO_E_VIRGULA
   10 parte_de_definicao_de_tipos: parte_de_definicao_de_tipos • PONTO_E_VIRGULA definicao_de_tipo

    PONTO_E_VIRGULA  shift, and go to state 31


State 26

   11 parte_de_definicao_de_tipos: definicao_de_tipo •

    $default  reduce using rule 11 (parte_de_definicao_de_tipos)


State 27

   21 parte_declara_vars_init: VAR • $@2 parte_declara_vars

    $default  reduce using rule 20 ($@2)

    $@2  go to state 32


State 28

    3 bloco: parte_de_declaracao_de_rotulos_init parte_de_definicao_de_tipos_init parte_declara_vars_init • parte_de_declaracao_de_sub_rotinas_init comando_composto

    PROCEDURE  shift, and go to state 33
    FUNCTION   shift, and go to state 34

    $default  reduce using rule 35 (parte_de_declaracao_de_sub_rotinas_init)

    parte_de_declaracao_de_sub_rotinas_init  go to state 35
    parte_de_declaracao_de_sub_rotinas       go to state 36
    declaracao_de_procedimento               go to state 37
    declaracao_de_funcao                     go to state 38


State 29

    6 parte_de_declaracao_de_rotulos: parte_de_declaracao_de_rotulos VIRGULA numero •

    $default  reduce using rule 6 (parte_de_declaracao_de_rotulos)


State 30

   12 definicao_de_tipo: IDENT IGUAL • tipo

    INTEIRO   shift, and go to state 39
    ARRAY     shift, and go to state 40
    BOLLEANO  shift, and go to state 41

    tipo  go to state 42


State 31

    8 parte_de_definicao_de_tipos_init: TYPE parte_de_definicao_de_tipos PONTO_E_VIRGULA •
   10 parte_de_definicao_de_tipos: parte_de_definicao_de_tipos PONTO_E_VIRGULA • definicao_de_tipo

    IDENT  shift, and go to state 24

    $default  reduce using rule 8 (parte_de_definicao_de_tipos_init)

    definicao_de_tipo  go to state 43


State 32

   21 parte_declara_vars_init: VAR $@2 • parte_declara_vars

    IDENT  shift, and go to state 44

    parte_declara_vars    go to state 45
    declara_var           go to state 46
    lista_idents_dec_var  go to state 47


State 33

   43 declaracao_de_procedimento: PROCEDURE • $@3 IDENT $@4 declaracao_de_procedimento_pf PONTO_E_VIRGULA $@5 bloco $@6 PONTO_E_VIRGULA

    $default  reduce using rule 39 ($@3)

    $@3  go to state 48


State 34

   50 declaracao_de_funcao: FUNCTION • $@7 IDENT $@8 declaracao_de_funcao_pf DOIS_PONTOS tipo_func $@9 PONTO_E_VIRGULA bloco $@10 PONTO_E_VIRGULA

    $default  reduce using rule 46 ($@7)

    $@7  go to state 49


State 35

    3 bloco: parte_de_declaracao_de_rotulos_init parte_de_definicao_de_tipos_init parte_declara_vars_init parte_de_declaracao_de_sub_rotinas_init • comando_composto

    T_BEGIN  shift, and go to state 50

    comando_composto  go to state 51


State 36

   34 parte_de_declaracao_de_sub_rotinas_init: parte_de_declaracao_de_sub_rotinas •
   36 parte_de_declaracao_de_sub_rotinas: parte_de_declaracao_de_sub_rotinas • declaracao_de_procedimento

    PROCEDURE  shift, and go to state 33

    $default  reduce using rule 34 (parte_de_declaracao_de_sub_rotinas_init)

    declaracao_de_procedimento  go to state 52


State 37

   37 parte_de_declaracao_de_sub_rotinas: declaracao_de_procedimento •

    $default  reduce using rule 37 (parte_de_declaracao_de_sub_rotinas)


State 38

   38 parte_de_declaracao_de_sub_rotinas: declaracao_de_funcao •

    $default  reduce using rule 38 (parte_de_declaracao_de_sub_rotinas)


State 39

   13 tipo: INTEIRO •

    $default  reduce using rule 13 (tipo)


State 40

   15 tipo: ARRAY • indice OF tipo
   16     | ARRAY • OF tipo

    OF      shift, and go to state 53
    NUMERO  shift, and go to state 16

    indice  go to state 54
    numero  go to state 55


State 41

   14 tipo: BOLLEANO •

    $default  reduce using rule 14 (tipo)


State 42

   12 definicao_de_tipo: IDENT IGUAL tipo •

    $default  reduce using rule 12 (definicao_de_tipo)


State 43

   10 parte_de_definicao_de_tipos: parte_de_definicao_de_tipos PONTO_E_VIRGULA definicao_de_tipo •

    $default  reduce using rule 10 (parte_de_definicao_de_tipos)


State 44

   29 lista_idents_dec_var: IDENT •

    $default  reduce using rule 29 (lista_idents_dec_var)


State 45

   21 parte_declara_vars_init: VAR $@2 parte_declara_vars •
   23 parte_declara_vars: parte_declara_vars • declara_var PONTO_E_VIRGULA

    IDENT  shift, and go to state 44

    $default  reduce using rule 21 (parte_declara_vars_init)

    declara_var           go to state 56
    lista_idents_dec_var  go to state 47


State 46

   24 parte_declara_vars: declara_var • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 57


State 47

   25 declara_var: lista_idents_dec_var • DOIS_PONTOS tipo
   28 lista_idents_dec_var: lista_idents_dec_var • VIRGULA IDENT

    DOIS_PONTOS  shift, and go to state 58
    VIRGULA      shift, and go to state 59


State 48

   43 declaracao_de_procedimento: PROCEDURE $@3 • IDENT $@4 declaracao_de_procedimento_pf PONTO_E_VIRGULA $@5 bloco $@6 PONTO_E_VIRGULA

    IDENT  shift, and go to state 60


State 49

   50 declaracao_de_funcao: FUNCTION $@7 • IDENT $@8 declaracao_de_funcao_pf DOIS_PONTOS tipo_func $@9 PONTO_E_VIRGULA bloco $@10 PONTO_E_VIRGULA

    IDENT  shift, and go to state 61


State 50

   60 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  shift, and go to state 50
    IF       shift, and go to state 62
    WHILE    shift, and go to state 63
    IDENT    shift, and go to state 64
    READ     shift, and go to state 65
    WRITE    shift, and go to state 66

    comando_composto            go to state 67
    comandos                    go to state 68
    comando                     go to state 69
    comando_sem_rotulo          go to state 70
    chamada_de_procedimento_RW  go to state 71
    comando_condicional         go to state 72
    if_then                     go to state 73
    comando_repetitivo          go to state 74


State 51

    3 bloco: parte_de_declaracao_de_rotulos_init parte_de_definicao_de_tipos_init parte_declara_vars_init parte_de_declaracao_de_sub_rotinas_init comando_composto •

    $default  reduce using rule 3 (bloco)


State 52

   36 parte_de_declaracao_de_sub_rotinas: parte_de_declaracao_de_sub_rotinas declaracao_de_procedimento •

    $default  reduce using rule 36 (parte_de_declaracao_de_sub_rotinas)


State 53

   16 tipo: ARRAY OF • tipo

    INTEIRO   shift, and go to state 39
    ARRAY     shift, and go to state 40
    BOLLEANO  shift, and go to state 41

    tipo  go to state 75


State 54

   15 tipo: ARRAY indice • OF tipo

    OF  shift, and go to state 76


State 55

   19 indice: numero • DOIS_PONTOS_SEQ numero

    DOIS_PONTOS_SEQ  shift, and go to state 77


State 56

   23 parte_declara_vars: parte_declara_vars declara_var • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 78


State 57

   24 parte_declara_vars: declara_var PONTO_E_VIRGULA •

    $default  reduce using rule 24 (parte_declara_vars)


State 58

   25 declara_var: lista_idents_dec_var DOIS_PONTOS • tipo

    INTEIRO   shift, and go to state 39
    ARRAY     shift, and go to state 40
    BOLLEANO  shift, and go to state 41

    tipo  go to state 79


State 59

   28 lista_idents_dec_var: lista_idents_dec_var VIRGULA • IDENT

    IDENT  shift, and go to state 80


State 60

   43 declaracao_de_procedimento: PROCEDURE $@3 IDENT • $@4 declaracao_de_procedimento_pf PONTO_E_VIRGULA $@5 bloco $@6 PONTO_E_VIRGULA

    $default  reduce using rule 40 ($@4)

    $@4  go to state 81


State 61

   50 declaracao_de_funcao: FUNCTION $@7 IDENT • $@8 declaracao_de_funcao_pf DOIS_PONTOS tipo_func $@9 PONTO_E_VIRGULA bloco $@10 PONTO_E_VIRGULA

    $default  reduce using rule 47 ($@8)

    $@8  go to state 82


State 62

   89 if_then: IF • $@16 expressao $@17 THEN comando_sem_rotulo

    $default  reduce using rule 87 ($@16)

    $@16  go to state 83


State 63

   94 comando_repetitivo: WHILE • $@18 expressao $@19 DO comando_composto_while

    $default  reduce using rule 92 ($@18)

    $@18  go to state 84


State 64

   69 comando_sem_rotulo: IDENT • $@11 atribuicao_ou_chamda_de_procedimento

    $default  reduce using rule 68 ($@11)

    $@11  go to state 85


State 65

   81 chamada_de_procedimento_RW: READ • $@14 ABRE_PARENTESES lista_idents_read FECHA_PARENTESES

    $default  reduce using rule 80 ($@14)

    $@14  go to state 86


State 66

   83 chamada_de_procedimento_RW: WRITE • $@15 ABRE_PARENTESES lista_de_expressoes_write FECHA_PARENTESES

    $default  reduce using rule 82 ($@15)

    $@15  go to state 87


State 67

   72 comando_sem_rotulo: comando_composto •

    $default  reduce using rule 72 (comando_sem_rotulo)


State 68

   60 comando_composto: T_BEGIN comandos • T_END
   62 comandos: comandos • comando comandos_end

    T_BEGIN  shift, and go to state 50
    IF       shift, and go to state 62
    WHILE    shift, and go to state 63
    T_END    shift, and go to state 88
    IDENT    shift, and go to state 64
    READ     shift, and go to state 65
    WRITE    shift, and go to state 66

    comando_composto            go to state 67
    comando                     go to state 89
    comando_sem_rotulo          go to state 90
    chamada_de_procedimento_RW  go to state 71
    comando_condicional         go to state 72
    if_then                     go to state 73
    comando_repetitivo          go to state 74


State 69

   63 comandos: comando • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 91


State 70

   64 comandos: comando_sem_rotulo •
   67 comando: comando_sem_rotulo •

    PONTO_E_VIRGULA  reduce using rule 67 (comando)
    $default         reduce using rule 64 (comandos)


State 71

   70 comando_sem_rotulo: chamada_de_procedimento_RW •

    $default  reduce using rule 70 (comando_sem_rotulo)


State 72

   73 comando_sem_rotulo: comando_condicional •

    $default  reduce using rule 73 (comando_sem_rotulo)


State 73

   86 comando_condicional: if_then • cond_else

    ELSE  shift, and go to state 92

    $default  reduce using rule 91 (cond_else)

    cond_else  go to state 93


State 74

   71 comando_sem_rotulo: comando_repetitivo •

    $default  reduce using rule 71 (comando_sem_rotulo)


State 75

   16 tipo: ARRAY OF tipo •

    $default  reduce using rule 16 (tipo)


State 76

   15 tipo: ARRAY indice OF • tipo

    INTEIRO   shift, and go to state 39
    ARRAY     shift, and go to state 40
    BOLLEANO  shift, and go to state 41

    tipo  go to state 94


State 77

   19 indice: numero DOIS_PONTOS_SEQ • numero

    NUMERO  shift, and go to state 16

    numero  go to state 95


State 78

   23 parte_declara_vars: parte_declara_vars declara_var PONTO_E_VIRGULA •

    $default  reduce using rule 23 (parte_declara_vars)


State 79

   25 declara_var: lista_idents_dec_var DOIS_PONTOS tipo •

    $default  reduce using rule 25 (declara_var)


State 80

   28 lista_idents_dec_var: lista_idents_dec_var VIRGULA IDENT •

    $default  reduce using rule 28 (lista_idents_dec_var)


State 81

   43 declaracao_de_procedimento: PROCEDURE $@3 IDENT $@4 • declaracao_de_procedimento_pf PONTO_E_VIRGULA $@5 bloco $@6 PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 96

    $default  reduce using rule 45 (declaracao_de_procedimento_pf)

    declaracao_de_procedimento_pf  go to state 97


State 82

   50 declaracao_de_funcao: FUNCTION $@7 IDENT $@8 • declaracao_de_funcao_pf DOIS_PONTOS tipo_func $@9 PONTO_E_VIRGULA bloco $@10 PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 98

    $default  reduce using rule 52 (declaracao_de_funcao_pf)

    declaracao_de_funcao_pf  go to state 99


State 83

   89 if_then: IF $@16 • expressao $@17 THEN comando_sem_rotulo

    MAIS             shift, and go to state 100
    MENOS            shift, and go to state 101
    ABRE_PARENTESES  shift, and go to state 102
    NUMERO           shift, and go to state 16
    IDENT            shift, and go to state 103
    NOT              shift, and go to state 104
    T_TRUE           shift, and go to state 105
    T_FALSE          shift, and go to state 106

    expressao            go to state 107
    expressao_simples    go to state 108
    termo                go to state 109
    fator                go to state 110
    varivel_ou_cmd_func  go to state 111
    numero               go to state 112
    vlr_booleano         go to state 113


State 84

   94 comando_repetitivo: WHILE $@18 • expressao $@19 DO comando_composto_while

    MAIS             shift, and go to state 100
    MENOS            shift, and go to state 101
    ABRE_PARENTESES  shift, and go to state 102
    NUMERO           shift, and go to state 16
    IDENT            shift, and go to state 103
    NOT              shift, and go to state 104
    T_TRUE           shift, and go to state 105
    T_FALSE          shift, and go to state 106

    expressao            go to state 114
    expressao_simples    go to state 108
    termo                go to state 109
    fator                go to state 110
    varivel_ou_cmd_func  go to state 111
    numero               go to state 112
    vlr_booleano         go to state 113


State 85

   69 comando_sem_rotulo: IDENT $@11 • atribuicao_ou_chamda_de_procedimento

    ATRIBUICAO  shift, and go to state 115

    $default  reduce using rule 75 ($@12)

    atribuicao_ou_chamda_de_procedimento  go to state 116
    $@12                                  go to state 117
    atribuicao                            go to state 118


State 86

   81 chamada_de_procedimento_RW: READ $@14 • ABRE_PARENTESES lista_idents_read FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 119


State 87

   83 chamada_de_procedimento_RW: WRITE $@15 • ABRE_PARENTESES lista_de_expressoes_write FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 120


State 88

   60 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 60 (comando_composto)


State 89
